--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load women_tags %}
 <!DOCTYPE html>
 <html>
 
@@ -37,6 +38,7 @@
 					<tr>
 						<!-- Sidebar слева -->
 						<td valign="top" class="left-chapters">
+
 							<ul id="leftchapters">
 								{% if cat_selected == 0 %}
 								<li class="selected">Все категории</li>
@@ -44,13 +46,8 @@
 								<li><a href="{% url 'home' %}">Все категории</a></li>
 								{% endif %}
 
-								{% for c in cats %}
-								{% if c.pk == cat_selected %}
-								<li class="selected">{{c.name}}</li>
-								{% else %}
-								<li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
-								{% endif %}
-								{% endfor %}
+								{% show_categories cat_selected=cat_selected %}
+
 								<li class="share">
 									<p>Наш канал</p>
 									<a class="share-yt"
